--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "load more",
     "button"
   ],
-  "license": "GNU General Public License v3.0",
+  "license": "BSD-3-Clause",
   "authors": [
     {
       "name": "MrAnger",
